test: Hide scrollbar to avoid layout shifts

--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ body {
 	justify-content: space-between;
 	min-height: 100vh;
 	min-height: 100svh;
-	align-items: center
+	align-items: center;
 }
 
 input[type=checkbox] {
@@ -111,6 +111,11 @@ input[type=checkbox] {
 	/* flex: 1; */
 	z-index: 2;
 	display: block;
+}
+
+body::-webkit-scrollbar {
+	-ms-overflow-style: none;
+	display: none;
 }
 
 #bookmarks {
